<resources>
    <string name="app_name">Mclinic</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="h">Hello blank fragment</string>

    <!-- home fragment strings -->
    <string name="home_fragment_connect_with_us">Connect</string>
    <string name="home_fragment_conditions">Conditions</string>
    <string name="home_fragment_our_clinic">Our Clinic</string>
    <string name="home_fragment_connect_next_visits">Next Visits</string>
    <string name="home_fragment_click_item_next_visit">Click Item To Show More Details</string>

    <!-- DashboardFragment strings -->
    <string name="dashboard_fragment_toolbar">Dashboard</string>
    <string name="dashboard_fragment_my_medical_reviews">My medical reviews</string>
    <string name="dashboard_fragment_list_of_doctors">List of My Doctors</string>


    <!-- notificationsFragment strings -->
    <string name="notifications_fragment_toolbar">Notifications</string>

    <!-- profileFragment strings -->
    <string name="profile_fragment_toolbar">Profile</string>
    <!-- item_my_medical_reviews strings -->
    <string name="item_my_medical_reviews_day">Day</string>
    <string name="item_my_medical_reviews_date">Date</string>
    <string name="item_my_medical_reviews_clock">Clock</string>
    <string name="item_my_medical_reviews_name_clinic">Clinic</string>
    <string name="profile_fragment_who_are_we">Who Are We</string>
    <string name="profile_fragment_edit_profile">Edit profile Information</string>
    <string name="profile_fragment_change_password">Change Password</string>
    <string name="profile_fragment_logout">Logout</string>
    <string name="profile_fragment_contact">contact with us</string>
    <string name="profile_fragment_terms_and_conditions">Terms and Conditions</string>


    <!-- item_drug_notifications strings -->

    <!-- patent_log_in_fragment strings -->

    <string name="patent_log_in_fragment">Log In Patient</string>
    <string name="patent_log_in_fragment_identity_num">Identity Number</string>
    <string name="patent_log_in_fragment_password">Password</string>
    <string name="patent_log_in_fragment_btn_log_in">LogIn</string>
    <string name="patent_log_in_fragment_register">Register</string>
    <string name="patent_log_in_fragment_forget_password">forget password</string>

    <!-- api_controller_auth_patient strings -->
    <string name="api_controller_auth_patient_identity_num_error">enter identity number</string>
    <string name="api_controller_auth_patient_password_error">enter password</string>

    <string name="no_connection">no_connection</string>

    <!-- patent_register_fragment strings -->

    <string name="patent_register_fragment">Register Patient</string>
    <string name="patent_register_fragment_name">Patient Name</string>
    <string name="patent_register_fragment_identity_num">Patient IdentityNumber</string>
    <string name="patent_register_fragment_gender">Patient Gender</string>
    <string name="patent_register_fragment_address">Patient Address</string>
    <string name="patent_register_fragment_mobile">Patient Mobile</string>
    <string name="patent_register_fragment_birth_date">Click To Set Patient BirthDate</string>
    <string name="patent_register_fragment_username">Patient Username</string>
    <string name="patent_register_fragment_password">Patient Password</string>
    <string name="patent_register_fragment_btn_register">Register</string>
    <string name="patent_register_fragment_login">Login</string>
    <string name="patent_register_fragment_title_dialog">Set Gender (female or male)</string>
    <string name="patent_register_fragment_title_gender">Click to Set Gender</string>

    <string name="gender_type_male">Male</string>
    <string name="gender_type_female">Female</string>
    <string name="gender_type_chanel">Chanel</string>

    <!-- next_visit_activity strings -->
    <string name="next_visit_activity">Next Visit Details</string>
    <string name="next_visit_activity_details">Clinic Details</string>
    <string name="next_visit_activity_clinic_name">Clinic Name</string>
    <string name="next_visit_activity_clinic_address">Clinic Address</string>
    <string name="next_visit_activity_clinic_phone">Clinic Phone</string>
    Call the clinic
    <string name="next_visit_activity_call_clinic">Call The Clinic</string>

    <string name="next_visit_activity_name_doctor">Name Of Doctor</string>
    <string name="next_visit_activity_medical_review_time">Time Of Medical Review</string>

    <!--    item_my_doctors-->
    <string name="item_my_doctors_details">details doctor and drugs</string>

    <!--    item_next_visit-->
    <string name="item_next_visit_details">Click for details</string>

    <!--    patient_drug_info_activity-->
    <string name="patient_drug_info_activity">Drugs of Doctor</string>
    <string name="patient_drug_info_activity_doctor">Doctor information</string>
    <string name="patient_drug_info_activity_list_of_drugs">List Drugs of Doctor</string>
</resources>
