<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NextVisitShowActivity"
    android:orientation="vertical"
    android:background="@color/back_ground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        >
        <androidx.appcompat.widget.AppCompatTextView
            android:gravity="left|center"
            android:id="@+id/welcomeText"
            android:layout_marginStart="20dp"
            android:text="@string/next_visit_activity"
            android:textStyle="normal"
            android:textSize="@dimen/_18ssp"
            android:textColor="@color/colorPrimary"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            tools:ignore="RtlCompat"
            />

        <ImageView
            android:id="@+id/next_visit_activity_id_back_btn"
            android:src="@drawable/ic_arrow_forward_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:contentDescription="TODO"
            android:layout_marginEnd="@dimen/_15sdp"
            tools:ignore="RtlCompat"/>
    </RelativeLayout>



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_15sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        android:outlineSpotShadowColor="@color/colorPrimary"
        app:cardElevation="@dimen/_4sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_15sdp"

            android:layout_marginBottom="@dimen/_15sdp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_14ssp"
                android:text="@string/next_visit_activity_details"
                />

            <View
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_5sdp"
                android:background="@color/back_ground">
            </View>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/next_visit_activity_id_clinic_name"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_14ssp"
                android:hint="@string/next_visit_activity_clinic_name"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/colorPrimary"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/next_visit_activity_id_clinic_address"
                android:textColor="@color/colorPrimary"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_14ssp"
                android:hint="@string/next_visit_activity_clinic_address"
                android:layout_marginTop="@dimen/_10sdp"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/next_visit_activity_id_clinic_phone"
                android:textColor="@color/colorPrimary"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_14ssp"
                android:hint="@string/next_visit_activity_clinic_phone"
                android:layout_marginTop="@dimen/_10sdp"
                />

            <View
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_5sdp"
                android:background="@color/back_ground">
            </View>

            <Button
                android:id="@+id/next_visit_activity_id_clinic_call"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/next_visit_activity_call_clinic"
                android:scrollbarSize="@dimen/_70sdp"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_40sdp"
                android:textColor="@color/colorPrimary"
                />





        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_15sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        android:outlineSpotShadowColor="@color/colorPrimary"
        app:cardElevation="@dimen/_4sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_15sdp"

            android:layout_marginBottom="@dimen/_15sdp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_14ssp"
                android:text="@string/next_visit_activity_name_doctor"
                />



            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/next_visit_activity_id_doctor_name"
                android:textColor="@color/colorPrimary"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_14ssp"
                android:hint="@string/next_visit_activity_name_doctor"
                android:layout_marginTop="@dimen/_10sdp"
                />

            <View
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_5sdp"
                android:background="@color/back_ground">
            </View>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_14ssp"
                android:hint="@string/next_visit_activity_medical_review_time"
                android:layout_marginTop="@dimen/_10sdp"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/next_visit_activity_id_medical_review_time"
                android:textColor="@color/colorPrimary"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_14ssp"
                android:hint="@string/next_visit_activity_medical_review_time"
                android:layout_marginTop="@dimen/_10sdp"
                />







        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>