<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_13sdp"
            android:layout_marginEnd="@dimen/_1sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            tools:ignore="RtlCompat">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:text="@string/item_my_medical_reviews_day"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/item_my_medical_reviews_day"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/colorPrimary"/>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_1sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            tools:ignore="RtlCompat">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:text="@string/item_my_medical_reviews_date"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/item_my_medical_reviews_date"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/colorPrimary"/>



        </LinearLayout>
    </LinearLayout>

    <View

        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"

        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/back_ground">
    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_13sdp"
            android:layout_marginEnd="@dimen/_1sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            tools:ignore="RtlCompat">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:text="@string/item_my_medical_reviews_clock"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/item_my_medical_reviews_clock"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/colorPrimary"/>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_1sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            tools:ignore="RtlCompat">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:text="@string/item_my_medical_reviews_name_clinic"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="Date"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/colorPrimary"/>



        </LinearLayout>
    </LinearLayout>
</LinearLayout>